[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/World/World_Controller.gd" type="Script" id=3]
[ext_resource path="res://Scenes/World/EnemiesSpawner.gd" type="Script" id=4]
[ext_resource path="res://Scenes/World/UI/WorldUI.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/PixeloidMono.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/World/AnimationPlayerTest.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/HPBAR/fill.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/HPBAR/border.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/HPBAR/label_bg.png" type="Texture" id=10]
[ext_resource path="res://Scenes/World/UI/HealthBar.gd" type="Script" id=11]
[ext_resource path="res://Assets/Background/stoneBG.png" type="Texture" id=12]
[ext_resource path="res://Scenes/World/CameraController.gd" type="Script" id=13]
[ext_resource path="res://Scenes/World/Foreground/ForegroundSpawner.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Menu/Pause/PauseScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Light/light texture.png" type="Texture" id=16]
[ext_resource path="res://Assets/Background/glass texture2.jpg" type="Texture" id=17]
[ext_resource path="res://Scenes/World/Light2D.gd" type="Script" id=18]
[ext_resource path="res://Scenes/World/CanvasEffects.gd" type="Script" id=20]
[ext_resource path="res://Scenes/World/UI/CooldownsContainer.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/World/UI/BuffsContainer.tscn" type="PackedScene" id=22]
[ext_resource path="res://Assets/Stairs/ground.png" type="Texture" id=23]

[sub_resource type="Animation" id=1]
resource_name = "Background"
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 782, 231 ), Vector2( 698, 291 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="CubeMesh" id=2]
size = Vector3( 8, 8, 2 )

[sub_resource type="Animation" id=3]
resource_name = "Reflect"
length = 3.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.361, 1 ), Vector2( 0.563404, 1 ), Vector2( 0.16855, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3.82203, -0.770972 ), Vector2( 0.475259, -0.751152 ), Vector2( -3.65299, -0.691692 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.39, 1.38, 0.58 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 137.331, -216.706, -137.331, 216.706, -156.321, -347.505, 0, 0, 0, 0, -584.694, -129.539, 297.341, -10.0794, -297.341, 10.0794, -1021.89, -87.9616 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 148.576, 8 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Count/Counter:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 42, 13.616 ), Vector2( 59, 13.616 ), Vector2( 35, 13.616 ), Vector2( 47, 13.616 ), Vector2( 42, 13.616 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Count/Counter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.960784, 0.227451, 0.0352941, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Flash"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 0.707106, 1.86607, 1 ),
"update": 0,
"values": [ Color( 0.0784314, 0.0745098, 0.0745098, 1 ), Color( 0.835938, 0.834534, 0.800018, 1 ), Color( 0.0784314, 0.0745098, 0.0745098, 1 ) ]
}

[sub_resource type="TileSet" id=11]
0/name = "ground.png 0"
0/texture = ExtResource( 23 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 50, 64, 63 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "ground.png 1"
1/texture = ExtResource( 23 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 192, -13, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="Animation" id=12]
resource_name = "Down"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, 32 ) ]
}

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 782, 231 )
scale = Vector2( 0.7, 0.5 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Sprite"]
autoplay = "Background"
anims/Background = SubResource( 1 )
script = ExtResource( 7 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Background"]
modulate = Color( 0.6, 0.635294, 0.690196, 1 )
position = Vector2( 450.285, 474.822 )
scale = Vector2( 35, 120 )
mesh = SubResource( 2 )
texture = ExtResource( 17 )

[node name="Light2D" type="Light2D" parent="Background/MeshInstance2D"]
position = Vector2( 3.82203, -0.770972 )
scale = Vector2( 0.361, 1 )
texture = ExtResource( 16 )
texture_scale = 0.01
energy = 0.39
shadow_enabled = true
script = ExtResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/MeshInstance2D/Light2D"]
anims/Reflect = SubResource( 3 )

[node name="Foreground" type="Node2D" parent="."]
position = Vector2( 1162.48, 497.803 )
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="Foreground"]
one_shot = true

[node name="PathToFollow" type="Path2D" parent="Foreground"]
curve = SubResource( 4 )

[node name="LevelInteractables" type="Node2D" parent="."]

[node name="PlayerFloor" type="StaticBody2D" parent="LevelInteractables"]
position = Vector2( 358.728, 473.475 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelInteractables/PlayerFloor"]
position = Vector2( 86.6206, -0.707092 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="LevelInteractables/PlayerFloor"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 87.4698, -0.353516 )
scale = Vector2( 4.57724, 0.25 )
texture = ExtResource( 2 )

[node name="TestFloor" type="StaticBody2D" parent="LevelInteractables"]
visible = false
position = Vector2( 207.699, 505.772 )
rotation = -0.108134
scale = Vector2( 3.97136, 1.01204 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelInteractables/TestFloor"]
position = Vector2( 86.6206, -0.707092 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="LevelInteractables/TestFloor"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 85.953, -2.24487 )
scale = Vector2( 4.57724, 0.25 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 460.209, 429.903 )
offset = Vector2( 200, -30 )
current = true
script = ExtResource( 13 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 460.209, 430.184 )
rotation = -0.349066

[node name="Spells" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]
position = Vector2( 1038.79, 379.523 )
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Enemies"]
wait_time = 2.0
one_shot = true

[node name="RunTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="HealthBar" type="HBoxContainer" parent="UI/CanvasLayer"]
margin_right = 488.0
margin_bottom = 56.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="NinePatchRect" parent="UI/CanvasLayer/HealthBar"]
margin_right = 150.0
margin_bottom = 56.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/CanvasLayer/HealthBar/Count"]
anchor_left = -0.02
anchor_top = -0.036
anchor_bottom = -0.036
margin_left = 12.1298
margin_top = 7.69058
margin_right = 84.1298
margin_bottom = 51.6906
custom_fonts/font = SubResource( 7 )
text = "HP "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="UI/CanvasLayer/HealthBar/Count"]
anchor_left = 0.282
anchor_top = 0.382
anchor_right = 0.5
anchor_bottom = 0.423
margin_left = -0.299999
margin_top = -7.776
margin_right = 72.0
margin_bottom = 16.928
custom_fonts/font = SubResource( 8 )
text = "100/100"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="UI/CanvasLayer/HealthBar"]
margin_left = 154.0
margin_right = 488.0
margin_bottom = 56.0
max_value = 35.0
value = 1.0
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 8 )

[node name="Tween" type="Tween" parent="UI/CanvasLayer/HealthBar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/CanvasLayer/HealthBar"]
autoplay = "shake"
anims/shake = SubResource( 9 )

[node name="PauseScreen" parent="UI/CanvasLayer" instance=ExtResource( 15 )]

[node name="CooldownsContainer" parent="UI/CanvasLayer" instance=ExtResource( 21 )]
pause_mode = 1
margin_left = 1.498
margin_top = 58.0
margin_right = 1.49805
margin_bottom = -630.0

[node name="BuffsContainer" parent="UI/CanvasLayer" instance=ExtResource( 22 )]
pause_mode = 1
margin_top = 116.0
margin_bottom = -572.0

[node name="CanvasEffects" type="CanvasModulate" parent="."]
color = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
script = ExtResource( 20 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasEffects"]
anims/Flash = SubResource( 10 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 11 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 2
format = 1
tile_data = PoolIntArray( 42, 0, 0, 65576, 0, 0, 131110, 0, 0, 196644, 0, 0, 262178, 0, 0, 327712, 0, 0, 393246, 0, 0, 458780, 0, 0, 524314, 0, 0, 589848, 0, 0, 655382, 0, 0, 720916, 0, 0, 786450, 0, 0, 851984, 0, 0, 917518, 0, 0, 983052, 0, 0, 1048586, 0, 0, 1114120, 0, 0, 1179654, 0, 0, 1245188, 0, 0, 1310722, 0, 0, 1376256, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TileMap"]
anims/Down = SubResource( 12 )
[connection signal="timeout" from="Foreground/Timer" to="Foreground" method="_on_Timer_timeout"]
[connection signal="health_changed" from="Player" to="UI" method="_on_Player_health_changed"]
[connection signal="timeout" from="RunTimer" to="." method="_on_RunTimer_timeout"]
[connection signal="health_updated" from="UI" to="UI/CanvasLayer/HealthBar" method="_on_UI_health_updated"]
